[FEAT] Add create,get comment and create,get replycomment apis
