# server/src/routes/comment.js
@@ -5,14 +5,34 @@ import isLogin from "../middlewares/isLogin.js";
 import {
   validateGetComment,
   validateCreateComment,
+  validateCreateReComment,
+  validateGetReComment,
 } from "../validator/comment.js";
 
 const router = express.Router();
+// get comment
 router.get("/:postType", validateGetComment, commentController.getComment);
+
+// create comment
 router.post(
   "/:postType",
   isLogin,
   validateCreateComment,
   commentController.createComment
+);
+
+// get reply comment
+router.get(
+  "/reply/:postType",
+  validateGetReComment,
+  commentController.getReComment
+);
+
+// create reply comment
+router.post(
+  "/reply/:postType",
+  isLogin,
+  validateCreateReComment,
+  commentController.createReComment
 );
 export default router;
