# server/src/validator/comment.js
@@ -42,3 +42,45 @@ export const validateCreateComment = [
     .withMessage("Please, provide the text"),
   validator,
 ];
+
+const isComment = async (value, { req }) => {
+  const { postType } = req.params;
+  const comment_id = value;
+  const comment = await data.comment.getCommentById(postType, comment_id);
+  if (comment) {
+    req.comment = comment;
+    return new Promise((res, rej) => res());
+  } else return new Promise((res, rej) => rej());
+};
+export const validateCreateReComment = [
+  param("postType")
+    .isIn(["ohwunwan", "feedback", "1rm"])
+    .withMessage(
+      "There are only 3Type in postType: ohwunwan, feedback, 1rm . Please provide one of the following"
+    ),
+  body("comment_id")
+    .custom((value, { req }) => !isNaN(value))
+    .withMessage("Please, provide comment_id as a number"),
+  body("comment_id") //
+    .custom(isComment)
+    .withMessage("No content"),
+  body("text") //
+    .notEmpty()
+    .withMessage("Please, provide the text"),
+  validator,
+];
+
+export const validateGetReComment = [
+  param("postType")
+    .isIn(["ohwunwan", "feedback", "1rm"])
+    .withMessage(
+      "There are only 3Type in postType: ohwunwan, feedback, 1rm . Please provide one of the following"
+    ),
+  query("comment_id")
+    .custom((value, { req }) => !isNaN(value))
+    .withMessage("Please, provide comment_id as a number"),
+  query("comment_id") //
+    .custom(isComment)
+    .withMessage("No content"),
+  validator,
+];
